exper/environment/cilium/cilium_policy_l7.yaml
# This file allows all traffic to and in the hotel reservation
apiVersion: "cilium.io/v2"
kind: CiliumNetworkPolicy
metadata:
  name: "l7-empty"
  namespace: hotel
spec:
  endpointSelector:
    matchLabels:
      app: hotel
  ingress:
  - fromEntities:
      - cluster
    toPorts:
    - ports:
      - port: "1"
        endPort: 65535
        protocol: TCP
      rules:
        http: [{}]
  - fromEndpoints:
    toPorts:
    - ports:
      - port: "1"
        endPort: 65535
        protocol: TCP
      rules:
        http: [{}]
